<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/border">

    <TextView
        android:id="@+id/textView"
        android:layout_width="292dp"
        android:layout_height="63dp"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/acceuil"
        android:textColor="@color/design_default_color_on_secondary"
        android:textColorLink="@color/design_default_color_on_secondary"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/play_button"
        android:layout_width="149dp"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:background="@color/colorButtons"
        android:text="@string/jouer"
        android:textColor="#FFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/profil_button"
        android:layout_width="149dp"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:background="@color/colorButtons"
        android:text="@string/profil"
        android:textColor="#FFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/play_button" />

    <Button
        android:id="@+id/leaderboard_button"
        android:layout_width="149dp"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:background="@color/colorButtons"
        android:text="@string/classement"
        android:textColor="#FFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profil_button" />

    <Button
        android:id="@+id/tutorial_button"
        android:layout_width="149dp"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:background="@color/colorButtons"
        android:text="Tutoriel"
        android:textColor="#FFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/leaderboard_button" />

    <Button
        android:id="@+id/logout_button"
        android:layout_width="149dp"
        android:layout_height="40dp"
        android:layout_marginBottom="50dp"
        android:background="@color/colorButtons"
        android:text="@string/logout_button"
        android:textColor="#FFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
