<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="5dp"
    tools:context=".ui.fragments.ChatFragment">

    <LinearLayout
        android:id="@+id/second_send"
        android:layout_width="590dp"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/small_border"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ask_tip_button"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/demander_un_indice"
                android:visibility="invisible"
                android:padding="5dp"
                android:textColor="#fff"
                android:background="@drawable/tip_button"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/send_guess_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deviner_la_r_ponse"
                android:visibility="invisible"
                android:textColor="#fff"
                android:background="@drawable/guess_button"
                android:padding="5dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/chat_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/envoyer"
                android:textColor="#fff"
                android:background="@drawable/chat_button"
                android:padding="5dp"
                android:textSize="14sp" />

        </LinearLayout>

        <EditText
            android:id="@+id/messageBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/entrez_un_message"
            android:importantForAutofill="no"
            android:inputType="text"
            android:windowSoftInputMode="adjustPan" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/main_send"
        android:layout_width="590dp"
        android:layout_height="882dp"
        android:layout_above="@+id/second_send"
        android:background="@drawable/small_border"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp">

        <ListView
            android:id="@+id/messageList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="-3dp"
            android:divider="@null"
            android:dividerHeight="0dp"
            android:stackFromBottom="true"
            android:transcriptMode="alwaysScroll" />

    </RelativeLayout>

</RelativeLayout>
